# forklaunch-js

./: .ai-rules.md  .cursorrules  .gitignore  LICENSE  README.md  bun.lockb  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
cli/: .gitignore  .npmignore  .rustfmt.toml  Cargo.toml  README.md  basic_init_test.sh  build.rs  package.json  pnpm-lock.yaml
cli/docs/: MANIFEST_GENERATION.md
cli/scripts/: install.js
cli/src/: build.rs  change.rs  config.rs  constants.rs  core.rs  delete.rs  depcheck.rs  eject.rs  environment.rs  init.rs  integrate.rs  login.rs  logout.rs  main.rs  prompt.rs  sdk.rs  sync.rs  utils.rs  version.rs  whoami.rs
cli/src/change/: application.rs  common.rs  core.rs  library.rs  router.rs  service.rs  worker.rs
cli/src/change/common/: description.rs  name.rs
cli/src/change/core/: change_database.rs  change_description.rs  change_name.rs  clean_application.rs
cli/src/config/: pull.rs  push.rs
cli/src/core/: ast.rs  base_path.rs  choices.rs  client_sdk.rs  command.rs  database.rs  docker.rs  env.rs  env_scope.rs  env_template.rs  flexible_path.rs  format.rs  gitignore.rs  hmac.rs  http_client.rs  husky.rs  iam.rs  lib.rs  library_scanner.rs  license.rs  manifest.rs  modules.rs  move_template.rs  mutable_enum.rs  name.rs  openapi_export.rs  package_json.rs  pnpm_workspace.rs  relative_path.rs  removal_template.rs  rendered_template.rs  string.rs  symlink_template.rs  symlinks.rs  template.rs  token.rs  tsconfig.rs  universal_sdk.rs  validate.rs  version_check.rs  (+4 more)
cli/src/core/ast/: deletions.rs  infrastructure.rs  injections.rs  parse_ast_program.rs  (+4 more)
cli/src/delete/: library.rs  router.rs  service.rs  worker.rs
cli/src/deploy/: create.rs  destroy.rs  mod.rs  utils.rs
cli/src/environment/: ast_parser.rs  env_utils.rs  sync.rs  validate.rs
cli/src/init/: application.rs  client.rs  config_macro.rs  controller.rs  core.rs  library.rs  module.rs  router.rs  service.rs  worker.rs
cli/src/modules/: package.json
cli/src/openapi/: export.rs  mod.rs
cli/src/release/: create.rs  git.rs  manifest_generator.rs  mod.rs  s3_upload.rs
cli/src/sdk/: mode.rs
cli/src/sync/: all.rs  constants.rs  library.rs  manifest.rs  module.rs  router.rs  service.rs  sync.rs  sync_base.rs  utils.rs  worker.rs
cli/test-sdk-default/: docker-compose.yaml
cli/test-sdk-default/.forklaunch/: manifest.toml
cli/test-sdk-mode/: docker-compose.yaml
cli/test-sdk-mode/.forklaunch/: manifest.toml
cli/test-sdk-mode/.husky/: pre-commit
cli/tests/: change_application.sh  change_library.sh  change_router.sh  change_router_add_mappers.sh  change_sdk_mode.sh  change_service.sh  change_service_worker_migration.sh  change_worker.sh  delete_library.sh  delete_router.sh  delete_service.sh  delete_worker.sh  depcheck.sh  dryrun.sh  eject.sh  environment_sync.sh  environment_validate.sh  existing_docker_compose.sh  init_application.sh  init_application_custom_path.sh  init_application_small.sh  init_billing_stripe.sh  init_compile.sh  init_iam_better_auth.sh  init_library.sh  init_module.sh  init_module_src_path.sh  init_router.sh  init_service.sh  init_service_mappers.sh  init_worker.sh  init_worker_mappers.sh  precheck_version_match_allows_run.sh  precheck_version_mismatch_decline_fails.sh  sync_add_remove_flow.sh  sync_all_subcommands.sh  sync_application.sh  sync_application_add.sh  sync_application_remove.sh  sync_library_subcommand.sh  (+2 more)
(+1853 files in other folders)
