[package]
name = "forklaunch"
version = "0.1.6"
edition = "2021"
license = "AGPL-3.0-only"
description = "Launch faster with forklaunch"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["cargo"] }
convert_case = "0.7.1"
futures-io = "0.3.31"
include_dir = { version = "0.7.4", features = ["glob"] }
indexmap = { version = "2.6.0", features = ["serde"] }
log = "0.4.22"
oxc_allocator = "0.48.2"
oxc_ast = { version = "0.48.2", features = ["serialize"] }
oxc_parser = "0.48.2"
paste = "1.0.15"
pathdiff = "0.2.2"
ramhorns = "1.0.1"
rcgen = "0.13.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
serde_yml = "0.0.12"
termcolor = "1.4.1"
toml = "0.8.19"
wasm-bindgen = "0.2.100"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
oxc_codegen = "0.48.2"
